// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`bracket_spacing.graphql - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
fragment Visit on HighlightedVisit
  @argumentDefinitions(
    count: {type: "Int", defaultValue: 20}
  ) {
  name
}

=====================================output=====================================
fragment Visit on HighlightedVisit
@argumentDefinitions(count: {type: "Int", defaultValue: 20}) {
  name
}

================================================================================
`;

exports[`bracket_spacing.graphql format 1`] = `
====================================options=====================================
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
fragment Visit on HighlightedVisit
  @argumentDefinitions(
    count: {type: "Int", defaultValue: 20}
  ) {
  name
}

=====================================output=====================================
fragment Visit on HighlightedVisit
@argumentDefinitions(count: { type: "Int", defaultValue: 20 }) {
  name
}

================================================================================
`;
